<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.test1.viewmodels.ModelView_signup" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_gravity="center|top"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/add_user"/>

            <EditText
                android:text="@={viewmodel.nicname}"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_insignup_height"
                android:hint="@string/nic_name"
                android:gravity="center"
                android:layout_gravity="center|top"
                android:layout_marginTop="140dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <EditText
                android:text="@={viewmodel.email}"

                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_insignup_height"
                android:hint="@string/email"
                android:gravity="center"
                android:layout_gravity="center|top"
                android:layout_marginTop="190dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <EditText
                android:text="@={viewmodel.password}"

                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_insignup_height"
                android:hint="@string/password"
                android:gravity="center"
                android:layout_gravity="center|top"
                android:layout_marginTop="240dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:onClick="@{viewmodel::click}"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_background"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_marginTop="320dp"
                android:layout_gravity="center|top"
                android:layout_marginBottom="20dp"
                />



        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>