<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ProfileFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101">

            <ImageView
                android:id="@+id/prof"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/fullname"
            android:fontFamily="@font/montr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.08" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saved"
            android:layout_width="@dimen/btns_in_profile"
            android:layout_height="@dimen/btn_in_profile_two"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/montr"
            android:text="@string/saved_post"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.301" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exit"
            android:layout_width="@dimen/btns_in_profile"
            android:layout_height="@dimen/btn_in_profile_two"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/montr"
            android:text="@string/exit"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.622" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/support"
            android:layout_width="@dimen/btns_in_profile"
            android:layout_height="@dimen/btn_in_profile_two"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/montr"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.463" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>