<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ViewActivity_post">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="@+id/title"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_view_height"
            android:layout_marginStart="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/share"
            android:background="@drawable/share2"
            android:layout_width="@dimen/share_width"
            android:layout_height="@dimen/share_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shapeableImageView"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montbold"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shapeableImageView"
            app:layout_constraintVertical_bias="0.063" />

        <LinearLayout
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintVertical_bias="0.073"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/dollartag"
                />
            <TextView

                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/montbold"
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/add_to_cart"
                android:layout_marginStart="70dp"
                android:layout_width="140dp"
                android:layout_height="40dp"
                app:cardCornerRadius="10dp"
                >
                <LinearLayout
                    android:padding="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/shoppingcartlue"
                        />
                    <TextView
                        android:textColor="@color/black"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_to_cart"
                        android:textSize="14sp"
                        android:fontFamily="@font/montr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>



        <LinearLayout
            android:layout_marginTop="50dp"
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/com"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/edittext_background"
                android:drawableStart="@mipmap/ic_comment"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montr"
                android:gravity="center"
                android:hint="@string/add_comment"
                android:textColor="@color/black"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="549dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_com"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/montr"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="41dp"
                tools:layout_editor_absoluteY="605dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            tools:listitem="@layout/comment_recycler"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.172" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>